# genesis-q4-core

./: .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  RELEASE_GUIDE.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
genesis_q4/: __init__.py  cli.py  constants.py  gray_code.py  navigator.py  serializer.py  state.py  tesseract.py  transitions.py
tests/: test_gray_code.py  test_serializer.py  test_state.py  test_tesseract.py  test_transitions.py
typescript/src/: Q4State.ts  grayCode.ts  hypercube.ts
