[project]
name = "genesis-q4-core"
version = "0.1.0"
description = "16-state Q4 space with Gray-Code encoding and Tesseract topology — the mathematical foundation of GenesisAeon"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Johann Römer", email = "joberoemer@gmail.com" },
    { name = "MOR Research Collective" },
]
requires-python = ">=3.11"
keywords = [
    "gray-code",
    "state-machine",
    "tesseract",
    "hypercube",
    "crep",
    "genesisaeon",
    "information-theory",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Zero runtime dependencies — no other GenesisAeon repos required.
dependencies = []

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]
cli = ["typer>=0.12.0", "rich>=13.7.0"]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.7.0",
    "pyyaml>=6.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
]

[project.scripts]
genesis-q4 = "genesis_q4.cli:app"

[project.urls]
Homepage    = "https://github.com/GenesisAeon/genesis-q4-core"
Repository  = "https://github.com/GenesisAeon/genesis-q4-core"
Issues      = "https://github.com/GenesisAeon/genesis-q4-core/issues"
Zenodo      = "https://doi.org/10.5281/zenodo.XXXXXXX"

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["genesis_q4"]

[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "W", "UP", "C4", "SIM"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "--cov=genesis_q4 --cov-report=term-missing -v"

[tool.coverage.run]
source = ["genesis_q4"]
omit   = ["tests/*"]

[tool.mypy]
python_version     = "3.11"
strict             = true
warn_return_any    = true
warn_unused_configs = true
ignore_missing_imports = true
